--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ futures = "0.3" # for our async / await blocks
 tokio = { version = "1.12.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 mysql = "*"
+chrono = "0.4"
